removing some files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .env
+trueskill_automate - Copy.py
+test_file_splitting.py
+supervive_id_getter.py
+scraping.code-workspace
+arena_trueskill_api.py
+Discord_bot_code.txt
