--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,13 @@ name = "pypi"
 
 [packages]
 flask = "*"
+bs4 = "*"
+urllib3 = "*"
+requests = "*"
+mpmath = "*"
+trueskill = "*"
+discord = "*"
+dotenv = "*"
 
 [dev-packages]
 
