--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-selenium = "*"
-bs4 = "*"
-urllib3 = "*"
-requests = "*"
-mpmath = "*"
-trueskill = "*"
-discord = "*"
-dotenv = "*"
+Flask="3.1.0"
+selenium="4.30.0"
+beautifulsoup4="4.13.3"
+urllib3="2.3.0"
+Requests="2.32.3"
+mpmath="1.3.0"
+trueskill="0.4.5"
+discord.py="2.5.2"
+python-dotenv="1.0.1"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.12.0"
