Added reset stat functionality; added most directories to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,8 @@ scraping.code-workspace
 arena_trueskill_api.py
 Discord_bot_code.txt
 TODO
+webdrivers
+test_files
+data_files
+temp_saves
 scratch.py
