--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,87 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+asttokens==3.0.0
+attrs==25.3.0
+backcall==0.2.0
 beautifulsoup4==4.13.3
+bleach==6.2.0
+blinker==1.9.0
+bs4==0.0.2
+certifi==2025.10.5
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+decorator==5.2.1
+defusedxml==0.7.1
 discord.py==2.5.2
+docopt==0.6.2
+executing==2.2.0
+fastjsonschema==2.21.1
 Flask==3.1.0
+frozenlist==1.5.0
+h11==0.14.0
+idna==3.10
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.1.3
 mpmath==1.3.0
-python-dotenv==1.1.0
-Requests==2.32.3
-selenium==4.30.0
-trueskill==0.4.5
-urllib3==2.3.0
+multidict==6.2.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+outcome==1.3.0.post0
+packaging==24.2
+pandocfilters==1.5.1
+parso==0.8.4
+pickleshare==0.7.5
+pipreqs==0.5.0
+platformdirs==4.3.7
+prompt_toolkit==3.0.50
+propcache==0.3.0
+pure_eval==0.2.3
 py-cord==2.6.1
+pycparser==2.22
+Pygments==2.19.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pywin32==310
+pyzmq==26.3.0
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.23.1
+selenium==4.38.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+stack-data==0.6.3
+tinycss2==1.4.0
+tornado==6.4.2
+traitlets==5.14.3
+trio==0.32.0
+trio-websocket==0.12.2
+trueskill==0.4.5
+typing_extensions==4.15.0
+undetected-chromedriver==3.5.5
+urllib3==2.5.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wsproto==1.2.0
+yarg==0.1.9
+yarl==1.18.3
